--- a/src/app/Components/contest/contest.component.html
+++ b/src/app/Components/contest/contest.component.html
@@ -3,11 +3,11 @@
         <!-- pagination -->
         <div class="mt-5 d-lg-flex justify-content-between" >
            <div class="d-flex col-lg-6 col-12">
-                <div>
+                <!-- <div>
                     <input type="submit" class="btn btn-light" value="Statistic" />
-                </div>
+                </div> -->
                 <div>
-                    <button type="submit" class="btn btn-primary ms-2" data-bs-toggle="modal"  data-bs-target="#exampleModal2" value="Create Contest">Create Contest</button>
+                    <button type="submit" class="btn btn-primary ms-2 mb-0" data-bs-toggle="modal"  data-bs-target="#exampleModal2" value="Create Contest">Create Contest</button>
                      <app-create-contest></app-create-contest>
                 </div>
             </div> 
@@ -19,7 +19,7 @@
 
         <section>
             <div class="contestTable text-center col-12 w-100">
-                <table id="listProblem" class="table table-striped table-responsive  table-borderless" cellspacing="0"
+                <table id="listProblem" class="table table-striped table-responsive  table-border" cellspacing="0"
                     width="100%">
                     <thead>
                         <tr class="p-4">
@@ -44,9 +44,9 @@
                             <td><i class="fas fa-star"></i></td>
                             <td> {{ contest.id }} </td>
                             <td><a [href]="contest.title" target="_blank">{{contest.title}}</a></td>
-                            <td> {{ contest.beginTime }} </td>
-                            <td> {{ contest.Length }} </td>
-                            <td><a [href]="contest.owner" target="_blank">{{contest.owner}}</a></td>
+                            <td> {{ contest.beginTime| date:'medium' }} </td>
+                            <td> {{ calculateHoursFromDuration(contest.duration) }} </td>
+                            <td><a [href]="contest.owner" target="_blank">{{contest.handle}}</a></td>
                         </tr>
                     </tbody>
                 </table>
