--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,11 +1,12 @@
+
 <div class="container-fluid">
   <div class="row">
     <div class="all_page " style="   background-color: #373737 ; ">
       <!-- Section 1 -->
       <section class="sec1">
-        <div class=" text-center hero container-fluid center ">
-          <div class="row justify-content-between " style="width: max-content;">
-            <div class="col-lg-5  d-none d-lg-block image  ">
+        <div class=" text-center hero center ">
+          <div class="row justify-content-between " >
+            <div class="col-lg-5 d-none d-lg-block image  ">
               <img class="h-100 w-100" src="/assets/images/home1.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 text  ">
@@ -25,9 +26,9 @@
       <div class=" container-fluid separator mt-md-27"></div>
 
       <!-- Section 2 -->
-      <section class="container-fluid  sec2 d-flex">
+      <section class="sec2 d-flex">
         <div class="row justify-content-between text-center ">
-          <div class="column img col-md-4 col-sm-6 order-md-2 col-sm-push-6 ms-5">
+          <div class="column img col-md-4 col-sm-6 order-md-2 col-sm-push-6">
             <div class="explore-card-base">
               <div class="explore-card">
                 <div class="card slowfloat2s">
@@ -106,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="column col-md-4 order-md-1 col-sm-push-6 intro-title text ">
+          <div class="column col-md-4 order-md-1 col-sm-push-6 text  " style="width: max-content;">
             <div class="d-flex Explor ms-md-5 " style="text-align: right; margin-left:20vw !important">
               <h2 class="pe-2">Start Exploring</h2>
               <i class=" fa fa-graduation-cap " style="font-size: 2em;" aria-hidden="true"></i>
@@ -116,9 +117,8 @@
               X-Judge by providing structure to guide your progress towards the next<br>
               step in your programming career
             </p>
-            <div style="   text-align: right;   margin-left: 12px;  margin-top: 16px;">
-              <a class="get_Started  " routerLink="problem">Get Started <i class="fa fa-angle-right"
-                  aria-hidden="true"></i></a>
+            <div style="   text-align: right;   margin-left: 12vw !important;  margin-top: 16px;">
+              <a class="get_Started  " routerLink="problem">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -127,19 +127,5 @@
       </section>
 
 
-      <!-- <section class="sec3">
-        <div class="feature-icon-base" style="transform: scale(0.7);">
-          <div class="icon red love-icon">
-            <div class="circle">
-              <div class="custom-icon"><img src="/static/images/landing_page/sf.png" alt="San Francisco" width="52"
-                  style="margin-top: -13px;"></div>
-            </div>
-          </div>
-        </div>
-        <div>
-
-        </div>
-      </section>
-    </div> -->
   </div>
 </div>
