--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
       <div class="logo">
         <img src="/assets/images/logo1-preview.jpg" alt="">
       </div>
-      <button style="border:none; background-color: #fff; margin-top: 4px; margin-right: 15px; " class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      <button style="border:none; background-color: #fff; margin-top: 4px; margin-right: 15px; " class="navbar-toggler border-none shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
