--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -65,7 +65,7 @@
                     </thead>
                     <tbody>
                         <tr class="my-sol">
-                            <td><a href=""> Accepted</a></td>
+                            <td><a href="">from api</a></td>
                             <td class="my-sol-time">24 months ago</td>
                         </tr>
                         <tr class="my-sol">
