--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -3,7 +3,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title " id="exampleModal2Label">Create Contest </h5>
-          <button type="button" class="btn-close ps-0 pe-0 w-25 border-none " data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close ps-0 pe-3 border-none shadow-none  " data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
         <div class="modal-body ">      
@@ -12,9 +12,9 @@
                     <div class="mt-3  d-flex">
                     <label class="col-md-2 form-label mt-2 "for="submit-open"  >Type</label>
                         <div class="btn-group ms-3 " role="group" >
-                            <button type="radio" class="border btn btn-secondary active" value="0"> Classical Contest</button>
-                            <button type="radio" class="border btn btn-secondary " value="1"> Group Contest</button>
-                            <button type="radio " class="border btn btn-secondary" value="2">Replay</button>
+                            <button type="radio" class="border btn btn btn-secondary active" value="0"> <img src="/assets/images/classical.gif" height="20" width="20">Classical Contest</button>                           
+                            <button type="radio" class="border btn btn-secondary " value="1"><img src="/assets/images/group.png" height="20" width="20"> Group Contest</button>
+                            <button type="radio " class="border btn btn-secondary" value="2"><img src="/assets/images/replay.png" height="20" width="20">Replay</button>
                         </div>
                     </div> 
                 </div>
@@ -73,8 +73,8 @@
         </div>
 
         <div class="modal-footer d-flex">
-           <button type="button" class="btn btn-danger w-25" data-bs-dismiss="modal">Close</button>
-           <button type="submit" class="btn btn-primary w-25 "[disabled]="createContestForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i> <span *ngIf="!isLoading">Confirm</span></button>
+           <button type="button" class="btn btn-danger " data-bs-dismiss="modal">Close</button>
+           <button type="submit" class="btn btn-primary "[disabled]="createContestForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i> <span *ngIf="!isLoading">Confirm</span></button>
         </div>
         </div>
     </div>
