--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -4,10 +4,10 @@
 		<div class="box col-md-6 col-lg-4">
 			<form (ngSubmit)="handleResetPassword()"[formGroup]="resetPasswordForm" class="form">
 				<h2>Reset Password</h2>
-				<app-form-input [controller]="resetPasswordForm.controls.password" [span]="'New Password'" ></app-form-input>
-				<app-form-input [controller]="resetPasswordForm.controls.confirmPassword" [span]="'Confirm Password'" ></app-form-input>   
+				<app-form-input [controller]="resetPasswordForm.controls.password" [span]="'New Password'" [inputType]="'password'"></app-form-input>
+				<app-form-input [controller]="resetPasswordForm.controls.confirmPassword" [span]="'Confirm Password'" [inputType]="'password'"></app-form-input>   
 				<button type="submit" [disabled]="resetPasswordForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-					Reset Password 
+					<span *ngIf="!isLoading">Reset Password </span>
 				  </button>
 			</form>
 		</div>
