--- a/src/app/Components/change-password/change-password.component.html
+++ b/src/app/Components/change-password/change-password.component.html
@@ -4,11 +4,11 @@
 		<div class="box col-md-6 col-lg-4">
 			<form (ngSubmit)="handleChangePassword()"[formGroup]="changePasswordForm" class="form">
 				<h2>Sign In</h2>
-				<app-form-input [controller]="changePasswordForm.controls.oldPassword" [span]="'Old Password'" ></app-form-input>
-				<app-form-input [controller]="changePasswordForm.controls.password" [span]="'New Password'" type="password" ></app-form-input>   
-				<app-form-input [controller]="changePasswordForm.controls.confirmPassword" [span]="'Confirm Password'" type="password"></app-form-input>
+				<app-form-input [controller]="changePasswordForm.controls.oldPassword" [span]="'Old Password'" [inputType]="'password'" ></app-form-input>
+				<app-form-input [controller]="changePasswordForm.controls.password" [span]="'New Password'" [inputType]="'password'"></app-form-input>   
+				<app-form-input [controller]="changePasswordForm.controls.confirmPassword" [span]="'Confirm Password'" [inputType]="'password'"></app-form-input>
 				<button type="submit" [disabled]="changePasswordForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-					Save 
+					<span *ngIf="!isLoading">Save</span>
 				</button>
 			</form>
 		</div>
