--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -4,10 +4,13 @@
 			<form (ngSubmit)="handleLogin()"[formGroup]="loginForm" class="form">
 				<h2>Sign In</h2>
 				<app-form-input [controller]="loginForm.controls.userHandle" [span]="'User Handle'"></app-form-input>
-				<app-form-input [controller]="loginForm.controls.userPassword" [span]="'Password'" ></app-form-input>   
-				<button type="submit" [disabled]="loginForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-					Login 
+				<app-form-input [controller]="loginForm.controls.userPassword" [span]="'Password'" [inputType]="'password'" ></app-form-input>   
+				<button type="submit" [disabled]="loginForm.invalid" >
+					<i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
+					<span *ngIf="!isLoading">Login</span>
 				  </button>
+				 
+
 				  <div class="links form-group">
 					<div class="w-50 ">
 						<a routerLink="/forgetPassword">Forget Password</a>
