--- a/src/app/Components/register/register.component.css
+++ b/src/app/Components/register/register.component.css
@@ -7,14 +7,12 @@ body {
 .box {
 	position: relative;
 	width: 485px;
-height: fit-content;
-	/* height: 690px; */
-	
+/* height: max-content; */
+	height: 690px;	
 	background: #1c1c1c;
 	border-radius: 50px 5px;
 	overflow: hidden;
-	/* left: 450px; */
-	top: 85px;
+    top: 85px;
 }
 
 .box::before {
@@ -77,26 +75,6 @@ h2 {
 	text-align: center;
 }
 
-.inputBox {
-	position: relative;
-	/* width: 300px; */
-	margin-top: 35px;
-}
-
-.inputBox input {
-	position: relative;
-	width: 100%;
-	padding: 20px 10px 10px;
-	border: none;
-	outline: none;
-	color: #23242a;
-	font-size: 1em;
-	letter-spacing: 0.05em;
-	z-index: 10;
-	background: transparent !important;
-
-}
-
 button[type="submit"] {
 	font-size: 20px;
 	border: none;
@@ -115,60 +93,3 @@ button[type="submit"]:active {
 	opacity: 0.8;
 
 }
-
-.inputBox span {
-	position: absolute;
-	left: 0;
-	padding: 20px 10px 10px;
-	font-size: 1em;
-	color: #8f8f8f;
-	pointer-events: none;
-	letter-spacing: 0.05em;
-	transition: 0.5s;
-
-}
-
-.inputBox span.img {
-	position: relative;
-	left: 0;
-	padding: 20px 10px 10px;
-	font-size: 1em;
-	color: #8f8f8f;
-	pointer-events: none;
-	letter-spacing: 0.05em;
-	transition: 0.5s;
-
-}
-
-.inputBox input:valid~span,
-.inputBox input:focus~span {
-	color: #45f3ff;
-	transform: translateX(-10px) translateY(-30px);
-	font-size: 0.75em;
-}
-
-.inputBox i {
-
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	/* width: 423px; */
-	height: 2px;
-	background: #45f3ff;
-	transition: 0.5s;
-	pointer-events: none;
-	border-radius: 4px;
-	z-index: 9;
-
-}
-
-.inputBox input:valid~i,
-.inputBox input:focus~i {
-
-	height: 44px;
-}
-
-
-
-
