--- a/src/app/shared/form-input/form-input.component.html
+++ b/src/app/shared/form-input/form-input.component.html
@@ -1,6 +1,6 @@
 <div class="inputBox form-group">
     <span >{{span}}</span>
-    <input  [formControl]="controller" required />
+    <input [type]="inputType"  [formControl]="controller" required />
     <span  *ngIf="(controller.touched || controller.dirty) && controller.invalid" class="mt-5" style="color:red !important">value is required</span>
     <!-- <span *ngIf="controller.getError('pattern')" class="mt-0" style="color:red"></span> -->
    
