change routerLink => href

--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -74,7 +74,7 @@
 
         <div class="modal-footer d-flex">
            <button type="button" class="btn btn-danger " data-bs-dismiss="modal">Close</button>
-           <button type="submit" class="btn btn-primary "[disabled]="createContestForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i> <span *ngIf="!isLoading">Confirm</span></button>
+           <button type="submit" class="btn btn-primary "[disabled]="createContestForm.invalid" > Confirm</button>
         </div>
         </div>
     </div>
