--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -14,9 +14,9 @@
               <p class="text-white">X-Judge is the best platform to help you enhance your skills, expand<br>
                 <span style="padding-left: 5px;"> knowledge and prepare for technical interviews.</span>
               </p>
-              <button *ngIf="!isLogin" class="register btn " routerLink="/register">Create Account <i
+              <button *ngIf="!isLogin" class="register btn " href="/register">Create Account <i
                   class="fa fa-angle-right" aria-hidden="true"></i></button>
-              <button *ngIf="isLogin" class="register btn" routerLink="/problem">All Problems <i
+              <button *ngIf="isLogin" class="register btn" href="/problem">All Problems <i
                   class="fa fa-angle-right" aria-hidden="true"></i></button>
             </div>
           </div>
@@ -118,7 +118,7 @@
               step in your programming career
             </p>
             <div style="   text-align: right;   margin-left: 12vw !important;  margin-top: 16px;">
-              <a class="get_Started  " routerLink="problem">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+              <a class="get_Started  " href="problem">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
