--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -25,7 +25,7 @@
                 <div class=" text-center ">
                     <div class="w-100">
                     <div class="col-xs-8">
-                        <a routerLink="" class="recrawl btn btn-secondary "> 
+                        <a href="" class="recrawl btn btn-secondary "> 
                             <i class="fa fa-refresh me-1"></i>Recrawl</a>
                     </div>
                     </div>
@@ -74,7 +74,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <a routerLink="">More...</a>
+                                <a href="">More...</a>
                             </td>
                         </tr>
                     </tbody>
