--- a/src/app/Components/submit-problem/submit-problem.component.html
+++ b/src/app/Components/submit-problem/submit-problem.component.html
@@ -43,7 +43,7 @@
 
         <div class="modal-footer d-flex">
            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-           <button type="submit" class="btn btn-primary "[disabled]="submitProblemForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i> <span *ngIf="!isLoading">Submit</span></button>
+           <button type="submit" class="btn btn-primary "[disabled]="submitProblemForm.invalid" > <span >Submit</span></button>
         </div>
         </div>
     </div>
