--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -5,7 +5,7 @@
 				<h2>Forget Password</h2>
 				<app-form-input [controller]="forgetPasswordForm.controls.email" [span]="'Email'"></app-form-input>
 				<button type="submit" [disabled]="forgetPasswordForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-					Send Email 
+					<span *ngIf="!isLoading">Send Email </span>
 				  </button>
 				
 			</form>
