chore: handle submit problem and problem filtration
- Remove statusComponent I don't know when it came and who made it, lol
- Handle sumbit component to take online judge and problem code for each problem
- Remove search functions

--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -7,7 +7,7 @@
                     <div class="col-xs-8">
                         <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal2" class="btn btn-success" >
                             <i class="fa fa-check"></i> Submit </button>
-                       <app-submit-problem></app-submit-problem>
+                       <app-submit-problem [onlineJudge]="problemInfo.source" [problemCode]="problemInfo.problemCode"></app-submit-problem>
                     </div>
                 </div>
 
