--- a/src/app/Components/submit-problem/submit-problem.component.html
+++ b/src/app/Components/submit-problem/submit-problem.component.html
@@ -6,23 +6,22 @@
           <button type="button" class="btn-close ps-0 pe-3  border-none shadow-none " data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <form (ngSubmit)="handleSubmitProblem(submitProblemForm)" [formGroup]="submitProblemForm">
-                <div class="row" id="open-row" style="    margin-right: 13vw;">
+            <form [formGroup]="submitProblemForm">
+                <div class="row" id="open-row" style="margin-right: 13vw;">
                     <div class=" d-flex">
                     <label for="submit-open" class="col-md-2 form-label  mt-2 me-5" >Open:</label>
-                        <div class="btn-group col-md-6 " role="group" >
-                            <button type="radio" class="border btn btn-secondary active" value="1">Yes</button>
-                            <button type="radio " class="border btn btn-secondary" value="0">No</button>
-                        </div>
+                    <div class="btn-group col-md-6 " role="group">
+                        <input type="hidden" formControlName="isOpen">
+                        <button type="radio" class="border btn btn-secondary" [class.active]="submitProblemForm.value.isOpen === true" (click)="submitProblemForm.controls['isOpen'].setValue(true)">Yes</button>
+                        <button type="radio" class="border btn btn-secondary" [class.active]="submitProblemForm.value.isOpen === false" (click)="submitProblemForm.controls['isOpen'].setValue(false)">No</button>
+                    </div>
                     </div>
                 </div>
               <div class="mb-3">
                 <label for="language" style="margin-right: 25vw;">Language:</label>
-                <select id="form3" class="form-select mt-3" formControlName="language" >
-                    <option value="CodeForces">CodeForces</option>
-                    <option value="CodeForces">CodeForces</option>
-                    <option value="CodeForces">CodeForces</option>
-                    <option value="CodeForces">CodeForces</option>
+                <select id="form3" class="form-select mt-3" formControlName="idValue" >
+                    <option value="" selected>Select Language</option>
+                    <option *ngFor="let language of languages" value="{{language.idValue}}">{{language.name}}</option>
                 </select>
                 <div *ngIf="submitProblemForm.get('language')?.errors && submitProblemForm.get('language')?.touched ">
                     <span *ngIf="submitProblemForm.get('language')?.getError('required')" class="m-0" style="color:red">Language is mandatory</span>
@@ -32,7 +31,7 @@
 
               <div class="mb-3">
                  <label for="solution"  style="margin-right: 25vw;">Solution:</label>
-                  <textarea id="solution" class="form-control" formControlName="solution" placeholder="Solution goes here"></textarea>
+                  <textarea id="solution" class="form-control" formControlName="solutionCode" placeholder="Solution goes here"></textarea>
                   <div *ngIf="submitProblemForm.get('solution')?.errors && submitProblemForm.get('solution')?.touched ">
                       <span *ngIf="submitProblemForm.get('solution')?.getError('required')" class="m-0" style="color:red">Solution is mandatory</span>
                   </div>
@@ -43,7 +42,7 @@
 
         <div class="modal-footer d-flex">
            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-           <button type="submit" class="btn btn-primary "[disabled]="submitProblemForm.invalid" > <span >Submit</span></button>
+           <button type="submit" class="btn btn-primary "[disabled]="submitProblemForm.invalid" (click)="handleSubmitProblem()"> <span >Submit</span></button>
         </div>
         </div>
     </div>
