change href => routerLink

--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -74,7 +74,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <a href="">More...</a>
+                                <a routerLink="">More...</a>
                             </td>
                         </tr>
                     </tbody>
