--- a/src/app/Components/change-password/change-password.component.html
+++ b/src/app/Components/change-password/change-password.component.html
@@ -3,7 +3,7 @@
 	<div class="row justify-content-center">
 		<div class="box col-md-6 col-lg-4">
 			<form (ngSubmit)="handleChangePassword()"[formGroup]="changePasswordForm" class="form">
-				<h2>Sign In</h2>
+				<h2>Change password</h2>
 				<app-form-input [controller]="changePasswordForm.controls.oldPassword" [span]="'Old Password'" [inputType]="'password'" ></app-form-input>
 				<app-form-input [controller]="changePasswordForm.controls.password" [span]="'New Password'" [inputType]="'password'"></app-form-input>   
 				<app-form-input [controller]="changePasswordForm.controls.confirmPassword" [span]="'Confirm Password'" [inputType]="'password'"></app-form-input>
