--- a/src/app/Components/problem/problem.component.html
+++ b/src/app/Components/problem/problem.component.html
@@ -49,11 +49,10 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let problem of Problems; let i = index">
+                    <tr *ngFor="let problem of Problems; trackBy:trackByProblemCode; let i = index; ">
                         <td><i class="fas fa-star"></i></td>
                         <td> {{ problem.oj }} </td>
-                        <td><a [href]="problem.problemLink"
-                                target="_blank">{{ problem.problemCode }}</a></td>
+                        <td><a [href]="problem.problemLink" target="_blank">{{ problem.problemCode }}</a></td>
                         <td> <a href="problem/{{problem.oj}}/{{problem.problemCode}}">{{ problem.problemTitle }}</a> </td>
                         <td><a [href]="problem.contestLink" target="_blank">{{ problem.contestName }}</a></td>
                         <td>{{ problem.solvedCount }}</td>
