--- a/src/app/Components/submit-result/submit-result.component.html
+++ b/src/app/Components/submit-result/submit-result.component.html
@@ -6,6 +6,7 @@
         <tr>
           <th scope="col">status</th>
           <th scope="col">Time</th>
+          <th scope="col">Memory</th>
           <th scope="col">Lang</th>
           <th scope="col">Submitted</th>
           <th scope="col">Open</th>
@@ -14,12 +15,16 @@
       </thead>
       <tbody>
         <tr>
-          <td class="status" scope="row" [style.color]="data.verdict === 'Accepted' ? 'darkgreen' : 'red'">{{ data.verdict }}</td>
-          <td class="status">{{data.timeUsage}}</td>
-          <td class="status">{{data.language}}</td>
-          <td class="status">{{data.submitTime * 1000 | date:'medium'}}</td>
-          <td class="status">{{data.isOpen}}</td>
-          <td class="status">{{data.remoteRunId}}</td>
+          <td class="status" scope="row" [style.color]="result.verdict === 'Accepted' ? 'darkgreen' : result.verdict === 'In Queue' ? 'black' : 'red'">
+            {{ result.verdict }}
+            <i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
+          </td>
+          <td class="status">{{result.timeUsage}}</td>
+          <td class="status">{{result.memoryUsage}}</td>
+          <td class="status">{{result.language}}</td>
+          <td class="status">{{result.submitTime * 1000 | date:'medium'}}</td>
+          <td class="status">{{result.isOpen}}</td>
+          <td class="status">{{result.remoteRunId}}</td>
         </tr>
       </tbody>
     </table>
@@ -28,7 +33,7 @@
       <h3 class="code-title">Solution:</h3>
       <pre class="code-block line-numbers">
         <code class="language-cpp">
-          {{data.solution}}
+          {{result.solution}}
         </code>
       </pre>
     </div>
